fixed select menu opening behind other elements

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1272,7 +1272,6 @@ div.menu-select-wrapper {
 
     &.open {
       box-shadow: $elevation-level-light-3;
-      margin-top: 56px;
     }
     // span.menu-dropdown-submenu-outer {
     //   display: flex;
@@ -1419,7 +1418,7 @@ div.menu-select-wrapper {
   }
   div.menu-select {
     display: inline-flex;
-    position: absolute;
+    position: relative;
     width: 100%;
   }
   // div.menu-dropdown {
